--- a/style.css
+++ b/style.css
@@ -1,40 +1,125 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
+
+* {
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #333;
+  background: #a1c3ff;
+}
+
+img {
+  max-width: 100%;
+}
+
+h1,
+h2 {
+  margin-bottom: 15px;
+}
+
+ul {
+  list-style: none;
 }
 
 .container {
-  border: 6px solid black;
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 30px;
 }
-.flex-item {
+
+.navbar {
+  background: #3474e6;
   color: white;
-  font-size: 1.5rem;
-  padding: 1rem;
-  text-align: center;
+  height: 60px;
 }
-.item-1 {
-  background-color: #b4bf35;
+
+.navbar .logo {
+  font-size: x-large;
+  font-weight: bold;
 }
-.item-2 {
-  background-color: #b95f21;
+
+.navbar a {
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: bold;
 }
-.item-3 {
-  background-color: #1c4c56;
+
+.navbar a:hover {
+  color: lightblue;
 }
-.item-4 {
-  background-color: #cfb276;
+
+.navbar .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
 }
-.item-5 {
-  background-color: #6b0803;
+
+.navbar ul {
+  display: flex;
 }
-.item-6 {
-  background-color: #1c4c56;
+
+.navbar ul li {
+  margin-left: 20px;
 }
-.item-7 {
-  background-color: #b95f21;
+
+.header {
+  background: #0a51cc;
+  color: white;
+  min-height: 400px;
 }
-.item-8 {
-  background-color: #01243a;
+
+.header h1 {
+  font-size: 3rem;
+  font-weight: bold;
+  line-height: 1.2;
 }
-.item-9 {
-  background-color: #aad041;
+
+.header img {
+  max-width: 400px;
+}
+
+.header .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.boxes .container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.box {
+  flex: 1;
+  background: #0a51cc;
+  color: #fff;
+  border-radius: 10px;
+  margin: 20px 10px;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.6);
+  padding: 15px 20px;
+}
+
+.box i {
+  margin-right: 10px;
+}
+
+@media (max-width: 768px) {
+  .header .container {
+    flex-direction: column;
+    padding-top: 20px;
+    text-align: center;
+  }
+
+  .boxes .container {
+    display: block;
+    text-align: center;
+  }
 }
